# linkedin-outreach

./: .env.example  .gitignore  AGENCY_BRIEF_2026-03-05.md  AUDIT_REPORT.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  Daily_Portal_Scan_Task.md  Daily_Scan_2026-03-05_Rescan.md  FULL_SCAN_AUDIT_2026-03-05.md  Fireworks_AI_Execution_Calendar.md  Fireworks_AI_Outreach.md  Fireworks_AI_Quick_Reference.md  Fireworks_AI_Strategy_Notes.md  Hippocratic_AI_1_Intelligence_Report.md  Hippocratic_AI_3_Outreach_Messages.md  Hypercubic_Outreach.md  Irina_Adamchic_Outreach.md  LangChain_Outreach.md  LinkedIn_Scan_Results.md  LlamaIndex_Execution_Checklist.md  LlamaIndex_Outreach.md  LlamaIndex_Summary.md  Networking_Log.md  Pair_Team_Outreach.md  Portal_Analytics.md  README.md  Snorkel_AI_Outreach_Package.md  Startup_Recruiter_Connection_Requests.md  TOOLS_AND_SKILLS_RECOMMENDATIONS.md  Today_Actions_2026-03-05.md  Together_AI_Daily_Action_Plan.md  Together_AI_Outreach_Package.md  Together_AI_Summary.md  pyproject.toml
.claude/agents/: architect.md  code-simplifier.md  dashboard-builder.md  data-quality-auditor.md  h1b-automation.md  linkedin-research.md  notion-engineer.md  outreach-builder.md  qa-specialist.md  scoring-engineer.md  scraper-builder.md  verify-work.md
.claude/commands/: application-tracker.md  clone.md  company-validator.md  daily-portal-scanner.md  half-clone.md  handoff.md  hiring-manager-finder.md  outreach-drafter.md  scan-builtin.md  scan-jobboard-ai.md  scan-jobright.md  scan-linkedin.md  scan-trueup.md  scan-wellfound.md  scan-wttj.md
.claude/rules/: browser-safety.md  parallel-work.md  verification.md  workflow.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  e344ca293b51_add_ats_fields_to_companies.py
config/: ab_experiments.json  criteria.yaml  domain_overrides.yaml  h1b_sources.yaml  linkedin_alerts.yaml  outreach_rules.yaml  portals.yaml  schedule.yaml  scoring_weights.yaml
scripts/: setup.sh
src/cli/: _db.py  contact_commands.py  gmail_commands.py  linkedin_commands.py  main.py  notion_commands.py  outreach_commands.py  pipeline_commands.py  portal_commands.py  scan_commands.py  system_commands.py  validate_commands.py  warmup_commands.py  workflow_commands.py
src/config/: enums.py  settings.py  startup_checks.py
src/dashboard/: app.py  themes.py
src/db/: __init__.py  database.py  fts.py  h1b_lookup.py  orm.py  seed.py
src/models/: __init__.py  (+6 more)
tests/: conftest.py  test_ab_queue_integration.py  test_ab_testing.py  test_alembic_setup.py  test_algolia_scraper.py  test_apify_live.py  test_archive.py  test_ats_scrapers.py  test_auto_promotion.py  test_batch_outreach.py  test_c1_integration.py  test_c3_integration.py  test_c4_ats_arch.py  test_c4_builtin_jobboard.py  test_c4_error_handling.py  test_c4_homepage_first.py  test_c4_integration.py  test_c4_linkedin.py  test_c4_profile_copy.py  test_calendar_bridge.py  test_circuit_breaker.py  test_cli.py  test_company_enrichment.py  test_concurrent_scan.py  test_coverage_boost.py  test_daily_orchestrator.py  test_dashboard.py  test_dashboard_enhanced.py  test_dashboard_phase2.py  test_dashboard_themes.py  test_dashboard_upgrade.py  test_db_performance.py  test_domain_scorer.py  test_dotenv_loading.py  test_e2e_pipeline.py  test_email_contact_fix.py  test_email_enrichment.py  test_email_outreach.py  test_enrichment.py  test_field_collision.py  (+67 more)
(+90 files in other folders)
