[project]
name = "linkedin-outreach"
version = "0.1.0"
description = "LinkedIn outreach automation with deterministic scoring, scraping, and CRM sync"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "playwright>=1.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "streamlit>=1.30",
    "loguru>=0.7",
    "apify-client>=1.6",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10",
    "thefuzz>=0.22",
    "rich>=13.0",
    "anthropic>=0.40",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
outreach = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
